--- a/sem.html
+++ b/sem.html
@@ -2,6 +2,7 @@
 <head>
 <title>Semester Subjects</title>
 <body>
+<p style="color:red;">Subjects</p>
 <h1>Embedded Systems</h1>
 <h2>Machine Learning</h2>
 <h3>Computer Networks</h3>
